--- a/counter/index.html
+++ b/counter/index.html
@@ -15,7 +15,7 @@
           counter
         </h1>
         <span id="value">0</span>
-        <div class="button-conatiner">
+        <div class="button-container">
           <button class="btn decrease">decrease</button>
           <button class="btn reset">reset</button>
           <button class="btn increase">increase</button>
