--- a/random-reviews/index.html
+++ b/random-reviews/index.html
@@ -14,7 +14,37 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>review project</h1>
+    <main>
+      <section class="container">
+        <!---title-->
+        <div class="title">
+          <h2>Our reviews</h2>
+          <div class="underline"></div>
+        </div>
+        <!--reviews-->
+        <article class="review">
+          <div class="img-container">
+            <img src="./person-1.jpeg" id="person-img" alt="">
+          </div>
+          <h4 id="author">sara jones</h4>
+          <p id="job">UX designer</p>
+          <p id="info">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione neque itaque ipsa laudantium odit repellendus veritatis, voluptatem dolor eius distinctio culpa quis, quaerat architecto id consectetur debitis! Ipsa, impedit sit!
+          </p>
+          <!---prev next btn-->
+          <div class="button-container">
+            <button class="prev-btn">
+              <i class="fas fa-chevron-left"></i>
+            </button>
+            <button class="next-btn">
+              <i class="fas fa-chevron-right"></i>
+            </button>
+          </div>
+          <!--random btn-->
+          <button class="random-btn">surprise me</button>
+        </article>
+      </section>
+    </main>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
