--- a/questions/index.html
+++ b/questions/index.html
@@ -18,7 +18,67 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>questions project</h1>
+    <section class="title">
+      <h2>general question</h2>
+    </section>
+    <!--question-->
+    <div class="section-center">
+      <!--single question-->
+      <article class="question">
+        <!--question title-->
+        <div class="question-title">
+        <p>do you accept all major credit cards?</p>
+        <button type="button" class="question-btn">
+          <span class="plus-icon">
+            <i class="far fa-plus-square"></i>
+          </span>
+          <span class="minus-icon">
+            <i class="far fa-minus-square"></i>
+          </span>
+        </button>
+      </div>
+      <!--question text-->
+      <div class="question-text">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem possimus ea incidunt expedita tempore magnam nobis, necessitatibus deleniti quas eveniet commodi officia animi quo, ipsa ipsam dolor reiciendis totam corporis.</p>
+      </div>
+      </article>
+      <article class="question">
+        <!--question title-->
+        <div class="question-title">
+        <p>do you accept all major credit cards?</p>
+        <button type="button" class="question-btn">
+          <span class="plus-icon">
+            <i class="far fa-plus-square"></i>
+          </span>
+          <span class="minus-icon">
+            <i class="far fa-minus-square"></i>
+          </span>
+        </button>
+      </div>
+      <!--question text-->
+      <div class="question-text">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem possimus ea incidunt expedita tempore magnam nobis, necessitatibus deleniti quas eveniet commodi officia animi quo, ipsa ipsam dolor reiciendis totam corporis.</p>
+      </div>
+      </article>
+      <article class="question">
+        <!--question title-->
+        <div class="question-title">
+        <p>do you accept all major credit cards?</p>
+        <button type="button" class="question-btn">
+          <span class="plus-icon">
+            <i class="far fa-plus-square"></i>
+          </span>
+          <span class="minus-icon">
+            <i class="far fa-minus-square"></i>
+          </span>
+        </button>
+      </div>
+      <!--question text-->
+      <div class="question-text">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem possimus ea incidunt expedita tempore magnam nobis, necessitatibus deleniti quas eveniet commodi officia animi quo, ipsa ipsam dolor reiciendis totam corporis.</p>
+      </div>
+      </article>
+    </div>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
